fix(ui): fix alignment issue with remember-me feature

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -225,6 +225,14 @@
   text-align: left;
 }
 
+.status-container {
+  display:flex;flex-direction:row-reverse;justify-content:space-between;align-items:center;position:relative
+}
+
+.remember-status {
+  position:absolute;left:0px;bottom: -10px
+}
+
 .form-control {
 
   &:focus {
